# evecalendar

./: .gitignore  LICENSE  README.md  evecalendar.cabal  stack.yaml
app/: Main.hs
src/: EveAPI.hs  EveCalendar.hs
src/Eve/: API.hs  Calendar.hs  EveAPI.hs  EveCalendar.hs  Types.hs
src/Eve/Internal/Types/: CachedUntil.hs  CalendarEvent.hs  Character.hs  Credentials.hs
src/Eve/Internal/Utils/: Utilities.hs  XmlReader.hs
src/Eve/Types/: CalendarEvent.hs  Character.hs
src/Eve/Utils/: Utilities.hs  XmlReader.hs
test/: Spec.hs
