name:                evecalendar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/evecalendar#readme
license:             MIT
license-file:        LICENSE
author:              Alex Gagné
copyright:           2017 Alex Gagné
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eve.API
                     , Eve.Types
  other-modules:       Eve.Internal.Types.CalendarEvent
                     , Eve.Internal.Types.Character
                     , Eve.Internal.Types.CachedUntil
                     , Eve.Internal.Utils.XmlReader
                     , Eve.Internal.Utils.Utilities 

  build-depends:       base >= 4.7 && < 5
                     , happstack-server
                     , cmdargs
                     , bytestring
                     , wreq
                     , lens
                     , text
                     , xml
                     , time
                     , old-locale
  default-language:    Haskell2010

executable evecalendar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , evecalendar
  default-language:    Haskell2010

test-suite evecalendar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , evecalendar
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/evecalendar
